# backend

./: .env.example  README.md  pyproject.toml  railway.json
alembic/: env.py
app/: constants.py  main.py
app/config/: logging_config.py  settings.py
app/controllers/: talent_query_controller.py
app/decorators/: security.py
app/dto/: linkedin_search_params_dto.py  resume_dto.py  talent_query_dto.py
app/enums/: credit_type_enum.py  transaction_type_enum.py
app/infrastructure/: apis.py  dependencies.py  logger.py  schemas.py  services.py
app/models/: credit_model.py  message_model.py  talent_model.py  talent_query_model.py
app/record/apis/: point_transaction_api.py  record_template_api.py
app/record/models/: association.py  point_transaction_model.py  record_model.py  record_template_model.py  tag_model.py
app/record/schemas/: point_transaction_schema.py  record_schema.py  record_template_schema.py  tag_schema.py
app/record/services/: point_transaction_service.py  record_service.py  record_template_service.py  tag_service.py
app/services/: credit_service.py  llm_model_service.py  resume_structure_service.py  structure_query_service.py  talent_pool_service.py  talent_service.py
app/user/: apis.py  models.py  schemas.py  security.py  selectors.py  services.py
app/utils/: list_utils.py
